--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#63ace5</color>
 
     <color name="white_color">#FFFFFF</color>
 
@@ -14,4 +14,10 @@
     <color name="divider_background">#e0e0e0</color>
 
     <color name="snackbar_error_color">#F72400</color>
+    <color name="divider_color">#EAEAEA</color>
+
+    <color name="task_list_action_color">#F7F6FA</color>
+    <color name="task_list_title_view_bg_color">#F8F8F8</color>
+
+
 </resources>
